--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,8 +1,8 @@
 pipeline {
   agent {
     docker {
-      image 'maven:3.9-eclipse-temurin-8-alpine'
-      //image 'abhishekf5/maven-abhishek-docker-agent:v1'
+      //image 'maven:3.9-eclipse-temurin-8-alpine'
+      image 'abhishekf5/maven-abhishek-docker-agent:v1'
       args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
     }
   }
